# OrbitFile

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs  utils.rs  模块说明.md
src-tauri/src/app_manager/: cache.rs  detector.rs  log_macros.rs  migration.rs  mod.rs  scanner.rs  uninstaller.rs
src-tauri/src/folder_manager/: mod.rs
src-tauri/src/storage/: data_dir.rs  history.rs  migrated_app_metadata.rs  mod.rs  operation_log.rs
src-tauri/src/system/: disk_usage.rs  icon.rs  mod.rs
src/components/: AppList.tsx  CleanupModal.tsx  DiskUsageBar.tsx  DonateModal.tsx  EmptyState.tsx  FilterSelect.tsx  MigrationModal.tsx  Modal.tsx  ModernCard.tsx  ModernTabBar.tsx  PageTransition.tsx  TabBar.tsx  TargetPickerDialog.tsx  TitleBar.tsx  Toast.tsx  UpdateNotification.tsx  UserManual.tsx
src/hooks/: useTheme.ts  useUpdater.ts
src/pages/: AppMigration.tsx  LargeFolders.tsx  MigrationHistory.tsx  Settings.tsx
src/styles/: components.css  variables.css
src/utils/: logger.ts
